--- a/index.html
+++ b/index.html
@@ -371,9 +371,123 @@
             <h6>blog & news</h6>
             <h2>our blogs</h2>
         </div>
+
+        <div class="blog-content">
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="assets/b1.webp" alt="">
+                </div>
+                <div class="blog-in">
+                    <div class="blog-left">
+                        <h3>22</h3>
+                    </div>
+                    <div class="bbb-in">
+                        <h6>may</h6>
+                    </div>
+                </div>
+
+                <div class="blog-right">
+                    <h4>how to win the attention of new clients: trips & tricks</h4>
+                    <p>post by admin / 3.comments</p>
+                </div>
+            </div>
+
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="assets/b2.webp" alt="">
+                </div>
+                <div class="blog-in">
+                    <div class="blog-left">
+                        <h3>22</h3>
+                    </div>
+                    <div class="bbb-in">
+                        <h6>may</h6>
+                    </div>
+                </div>
+
+                <div class="blog-right">
+                    <h4>how to win the attention of new clients: trips & tricks</h4>
+                    <p>post by admin / 3.comments</p>
+                </div>
+            </div>
+
+            <div class="blog-box">
+                <div class="blog-img">
+                    <img src="assets/b3.webp" alt="">
+                </div>
+                <div class="blog-in">
+                    <div class="blog-left">
+                        <h3>22</h3>
+                    </div>
+                    <div class="bbb-in">
+                        <h6>may</h6>
+                    </div>
+                </div>
+
+                <div class="blog-right">
+                    <h4>how to win the attention of new clients: trips & tricks</h4>
+                    <p>post by admin / 3.comments</p>
+                </div>
+            </div>
+
+           
+
+        </div>
     </section>
 
 
+    <!--footer-->
+
+    <section class="footer">
+        <div class="footer-box">
+            <a href="" class="logo">
+                <img src="assets/logo.png" alt="">
+            </a>
+            <h5>we belive it has the power to do <br> amazing things</h5>
+
+            <div class="icons">
+                <a href="#"><i class="ri-facebook-fill"></i></a>
+                <a href="#"><i class="ri-instagram-fill"></i></a>
+                <a href="#"><i class="ri-dribbble-fill"></i></a>
+                <a href="#"><i class="ri-twitter-fill"></i></a>
+                <a href="#"><i class="ri-youtube-fill"></i></a>
+            </div>
+        </div>
+
+        <div class="footer-box">
+            <h3>useful links</h3>
+            <li><a href="#">support</a></li>
+            <li><a href="#">privacy policy</a></li>
+            <li><a href="#">terms of use</a></li>
+            <li><a href="#">site map</a></li>
+            <li><a href="#">expert tetimony</a></li>
+        </div>
+
+        <div class="footer-box">
+            <h3>our services</h3>
+            <li><a href="#">contact us</a></li>
+            <li><a href="#">track your order</a></li>
+            <li><a href="#">returns policy</a></li>
+            <li><a href="#">warranty & repair</a></li>
+            <li><a href="#">ma account</a></li>
+        </div>
+
+        <div class="footer-box">
+            <h3>contact</h3>
+            <li><a href="#">work time</a></li>
+            <li><a href="#">monday - friday</a></li>
+            <li><a href="#">11:00 - 00:00</a></li>
+            <li><a href="#">addRess</a></li>
+            <li><a href="#">La, vehiculas streets, 09</a></li>
+        </div>
+
+    </section>
+
+    <div class="copyright">
+        <p>© all copyrights 2022 by tahmid ahmed</p>
+    </div>
+
+    <a href="#" class="scroll-btnnn"><i class="ri-arrow-up-line"></i></a>
 
     <!--js-->
     <script src="script.js"></script>
